syntax = "proto3";

option go_package = "storage";
option cc_enable_arenas = true;
option java_package = "io.stackrox.proto.storage";

import "google/protobuf/timestamp.proto";
import "protobuf/gogoproto/gogo.proto";

package storage;

message ProcessWhitelistKey {
    // The idea is for the keys to be flexible.
    // Only certain combinations of these will be supported.
    string deployment_id     = 1[(gogoproto.moretags) = "search:\"Deployment ID,hidden\""];
    string container_name    = 2;
}

message ProcessWhitelist {
    string              id  = 1;
    ProcessWhitelistKey key = 2;

    repeated WhitelistElement elements          = 3;
    repeated WhitelistElement element_graveyard = 8 [(gogoproto.moretags) = "search:\"-\""];

    google.protobuf.Timestamp created                    = 4;
    google.protobuf.Timestamp user_locked_timestamp      = 5;
    google.protobuf.Timestamp stack_rox_locked_timestamp = 6;
    google.protobuf.Timestamp last_update                = 7;
}

message WhitelistElement {
    WhitelistItem element = 1;
    bool          auto    = 2;
}

message WhitelistItem {
    oneof item {
        string process_name = 1 [(gogoproto.moretags) = "search:\"Process Name\""];
    }
}

// ContainerNameAndWhitelistStatus represents a cached result of process evaluation on a specific container name.
message ContainerNameAndWhitelistStatus {
    enum WhitelistStatus {
        INVALID       = 0;
        NOT_GENERATED = 1; // In current implementation, this is a temporary condition.
        UNLOCKED      = 2;
        LOCKED        = 3;
    }
    string          container_name               = 1;
    WhitelistStatus whitelist_status             = 2;
    bool            anomalous_processes_executed = 3;
}


// ProcessWhitelistResults represent cached results of process whitelist evaluation.
message ProcessWhitelistResults {
    string                                   deployment_id      = 1;
    repeated ContainerNameAndWhitelistStatus whitelist_statuses = 2;
}

